--- a/app/src/main/res/layout/base_window_layout_marine.xml
+++ b/app/src/main/res/layout/base_window_layout_marine.xml
@@ -8,6 +8,7 @@
     android:animateLayoutChanges="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
+    android:clickable="false"
     android:theme="@style/AppThemeMarineHome"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".applicationMain.BaseWindowActivity"
@@ -23,6 +24,7 @@
         android:orientation="vertical"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:clickable="false"
         >
         <!-- Linter complaints that this LinearLayout or parent LinearLayout is useless, but I think both are needed. -->
         <LinearLayout
@@ -45,6 +47,7 @@
                 android:animateLayoutChanges="true"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
+                android:clickable="false"
                 >
                 <TextView
                     android:clickable="false"
@@ -74,6 +77,7 @@
                 android:animateLayoutChanges="true"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
+                android:clickable="false"
                 >
                 <ViewStub
                     android:layout_width="match_parent"
@@ -82,6 +86,7 @@
                     android:animateLayoutChanges="true"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
+                    android:clickable="false"
                     />
             </LinearLayout>
             <!--
@@ -99,6 +104,7 @@
                 android:animateLayoutChanges="true"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
+                android:clickable="false"
                 >
                 <TextView
                     android:clickable="false"
