--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorBackgroundOfCommand">#dddddd</color>
     <color name="baseBackground">#ffffff</color>
     <color name="selectedItemBackground">#cccccc</color>
+    <color name="disabledText">#808080</color>
 
     <color name="colorAccentDark">#4d68ff</color>
     <color name="baseTextDark">#ffffff</color>
@@ -18,6 +19,7 @@
     <color name="colorBackgroundOfCommandDark">#444444</color>
     <color name="baseBackgroundDark">#000000</color>
     <color name="selectedItemBackgroundDark">#666666</color>
+    <color name="disabledTextDark">#808080</color>
 
     <color name="baseBackgroundMarine">#aaddff</color>
     <color name="selectedItemBackgroundMarine">#88bbdd</color>
@@ -28,4 +30,5 @@
     <color name="MarineBottomColor">#4464aa</color>
 
     <color name="oldComputerForegroundColor">#00ff00</color>
+    <color name="oldComputerDisabledColor">#008000</color>
 </resources>
