--- a/app/src/main/res/layout/widget_launcher_dark_theme.xml
+++ b/app/src/main/res/layout/widget_launcher_dark_theme.xml
@@ -7,7 +7,7 @@
     android:animateLayoutChanges="false"
     android:focusable="false"
     android:focusableInTouchMode="false"
-    android:theme="@style/AppThemeDarkHome"
+    android:theme="@style/AppThemeBlueLineConsoleDarkHome"
     xmlns:tools="http://schemas.android.com/tools"
     >
     <LinearLayout
